// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 700;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  margin-bottom: 1rem;
  color: #1a8385;
}

<h1
  class="c0"
>
  Hello world
</h1>
`;

exports[`it works with different kind and size 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 700;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  margin-bottom: 1rem;
  color: #937032;
}

<h3
  class="c0"
>
  Hello world
</h3>
`;

exports[`it works with href target and rel 1`] = `
.c0 {
  font-size: 1rem;
  font-weight: 700;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  margin-bottom: 1rem;
  color: #937032;
}

.c1 {
  border-style: solid;
  font-size: 1rem;
  font-weight: 700;
  font-family: Montserrat,sans-serif;
  line-height: initial;
  border-bottom-width: 1px;
  margin-bottom: 1rem;
  color: #937032;
  border-bottom-color: #4AD6D8;
}

.c1:hover {
  color: #937032;
  border-bottom-color: #1a8385;
}

<h3
  class="c0"
>
  <a
    class="c1"
    href="http://google.com"
    rel="nofollow noopener"
    target="_blank"
  >
    Hello world
  </a>
</h3>
`;
